# personalNotes

./: .gitignore  Design and implement database objects with SQL.ipynb  README.md  basic.md  colabFileManagement.ipynb  create-repository-v2.ps1  requirements.txt
.evenv/: pyvenv.cfg
.evenv/Scripts/: activate  (+1 more)
ai-ml-roadmap/: .env.example  .gitignore  .pre-commit-config.yaml  LEARNING_LOG.md  PROJECT_TRACKER.md  README.md  RESOURCES.md  pyproject.toml
ai-ml-roadmap/.github/: PULL_REQUEST_TEMPLATE.md
ai-ml-roadmap/.github/workflows/: lint.yml  pre-commit.yml  security.yml  tests.yml
ai-ml-roadmap/configs/: logging.yaml  paths.yaml  settings.yaml
ai-ml-roadmap/phase-00-foundations/: README.md
ai-ml-roadmap/phase-01-machine-learning/: README.md
ai-ml-roadmap/phase-01-machine-learning/assets/fastaiIntroductionToMachineLearningforCodersNotes/: L10.SGDRegularizationSparseTextModelsAndNaiveBayesFrom1stPrinciples.md  L11_NB_SVM_PriorCentredRegularisationEmbeddingsAndMixedTabularModels.md  L12_TimeSeriesFeaturesModelChoiceValidationAndResponsibleML.md  L1_IntroToMachineLearning.md  L2_RandomForestsfromFirstPrinciples.md  L3_ScalingTabularMLAndInterpretingRandomForests.md  L4_RandomForestTuningCorrelatedFeaturesPartialDependenceAndLocalExplanations.md  L5.GeneralizationTimeAwareValidationTreeExplanationsDistributionShiftAndARandomForestSkeleton.md  L6.FrompredictionsToDecisionsExplanationsInteractionsAndExtrapolation.md  L7_ValidationStatisticsAndARandomForestBuiltFromFirstPrinciples.md  L8_FromImageTensorsToANeuralNetworkClassifier.md  L9_BroadcastingNeuralNetworkCompositionSGDAndBackpropagationFrom1stPrinciples.md
ai-ml-roadmap/phase-02-deep-learning/: README.md
ai-ml-roadmap/phase-03-nlp-transformers/: README.md
ai-ml-roadmap/phase-035-production-systems/: README.md
ai-ml-roadmap/phase-04-data-engineering/: README.md
ai-ml-roadmap/phase-05-mlops-production/: README.md
ai-ml-roadmap/phase-06-llms-rag-agents/: README.md
ai-ml-roadmap/phase-07-advanced-ai-engineering/: README.md
ai-ml-roadmap/phase-08-capstone/: README.md
ai-ml-roadmap/projects/_template/: README.md
ai-ml-roadmap/scripts/install/: install-all.ps1  install-phase0.ps1  install-phase1.ps1  install-phase2.ps1  install-phase3.5.ps1  install-phase3.ps1  install-phase4.ps1  install-phase5.ps1  install-phase6.ps1  install-phase7.ps1  install-phase8.ps1
ai-ml-roadmap/scripts/setup/: setup.ps1
ai-ml-roadmap/src/agents/: __init__.py
ai-ml-roadmap/src/common/: __init__.py
ai-ml-roadmap/src/config/: __init__.py
ai-ml-roadmap/src/deployment/: __init__.py
ai-ml-roadmap/src/evaluation/: __init__.py
ai-ml-roadmap/src/features/: __init__.py
ai-ml-roadmap/src/llm/: __init__.py
ai-ml-roadmap/src/monitoring/: __init__.py
ai-ml-roadmap/src/rag/: __init__.py
ai-ml-roadmap/src/training/: __init__.py
ai-ml-roadmap/src/visualization/: __init__.py
ai-ml-roadmap/tests/: test_shared.py
(+116 files in other folders)
